[package]
name = "uule-converter"
description = "Encodes and decodes Google's UULE v1 and v2 formats"
version = "0.1.0"
edition = "2021"
authors = ["Tomislav Pesut <t@tomislav.io>"]
readme = "README.md"
repository = "https://github.com/tomca32/uule-converter"
license = "MIT"
keywords = ["uule", "encoder", "decoder"]
categories = ["encoding"]
exclude = [".github"]

[dependencies]
base64-url = "2.0.0"
thiserror = "1.0.50"
